change /issueasset amount to amounts
